style: 초기 페이지 스타일 적용

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,45 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="{{ site.baseurl }}/about">About</a> page.
+<footer>
+    <div class="social-icons">
+        <a href="https://github.com/Monixc" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="https://monicx.tistory.com/" target="_blank" rel="noopener noreferrer">
+            <i class="fas fa-blog"></i>
+        </a>
+        <a href="https://www.instagram.com/dev.monicx" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-instagram"></i>
+        </a>
+    </div>
+
+</footer>
+
+<style>
+    footer {
+        text-align: center;
+        padding: 2em 0;
+    }
+
+    .social-icons {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1em;
+    }
+
+    .social-icons a {
+        margin: 0 10px;
+        color: #333;
+        font-size: 1.5em;
+        text-decoration: none;
+        border-bottom: none;
+    }
+
+    .social-icons a:hover {
+        color: #FF9800;
+    }
+
+    .social-icons a:after {
+        content: none;
+    }
+</style>
+
+<script src="https://kit.fontawesome.com/7d4b429529.js" crossorigin="anonymous"></script>
