--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,14 +1,17 @@
+@use "sass:color";
+
 $color-primary: hsl(0, 0%, 10%);
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
 $color-border: hsl(0, 0%, 85%);
-$color-box-background: mix($color-primary, white, 4%);
+$color-box-background: color.mix($color-primary, white, 4%);
 $border-radius: 4px;
-$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-  sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+$font-family: "Pretendard", -apple-system, BlinkMacSystemFont, Segoe UI,
+  Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+  Segoe UI Symbol;
 
 body {
-  box-sizing: content-box;
+  box-sizing: border-box;
   font-family: $font-family;
   margin: 0 auto;
   line-height: 1.7;
@@ -17,6 +20,7 @@ body {
   color: $color-text;
   font-size: 1rem;
   max-width: 63em;
+  width: 100%;
 
   @media (min-width: 820px) {
     font-size: 1.2rem;
@@ -32,7 +36,7 @@ time {
 footer {
   margin: 2em 0;
   font-size: 0.8em;
-  color: mix($color-text, white, 80%);
+  color: color.mix($color-text, white, 80%);
   padding-top: 1em;
 }
 
