style: 연관된 노트 미리보기에서 블록 링크에 대한 처리

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -28,8 +28,8 @@ layout: default
             <strong>{{ backlink.title }}</strong>
           </a><br>
           <div style="font-size: 0.9em">
-            {{ backlink.excerpt | strip_html | truncatewords: 20 | replace: "[[", "<span style='color: #888;'>" |
-              replace: "]]", "</span>" }}
+            {{ backlink.excerpt | strip_html | truncatewords: 20 | replace: "[[", "<span style='display:none;'>" |
+              replace: "]]", "</span>" | replace: "#", "<span style='color: #888;'>" }}
           </div>
         </div>
         {% endfor %}
